--- a/webpages/contents/style/index.css
+++ b/webpages/contents/style/index.css
@@ -881,6 +881,14 @@ form > button:not(:disabled):hover {
   }
 }
 
+#dropdown-menu {
+  display: none;
+}
+
+#dropdown-content {
+  display: none;
+}
+
 @media screen and (max-width: 1024px) {
   .top-bar {
     height: 12.5vh;
@@ -1031,13 +1039,15 @@ form > button:not(:disabled):hover {
   .img-border {
     width: 50px;
     height: 50px;
-    top: 1.25%;
+    top: 2.5%;
+    left: 5%;
   }
 
   .img-wrapper {
     width: 53px;
     height: 53px;
-    top: 1.25%;
+    top: 2.5%;
+    left: 5%;
   }
 
   .profile-img {
@@ -1111,7 +1121,8 @@ form > button:not(:disabled):hover {
   }
 
   .row1-wrapper a {
-    width: 50%;
+    width: 145px;
+    padding: 2%;
   }
 
   #repo-container {
@@ -1154,15 +1165,15 @@ form > button:not(:disabled):hover {
   }
 
   #contributions {
-    top: 26.5%;
+    top: 23.5%;
   }
 
   #pinned {
-    top: 37.5%;
+    top: 34.5%;
   }
 
   #language {
-    top: 70%;
+    top: 64%;
   }
 
   .contact-content > form > .form-row {
@@ -1171,5 +1182,45 @@ form > button:not(:disabled):hover {
 
   .second-row {
     width: 100%;
+  }
+
+  #dropdown-menu {
+    display: flex;
+    position: absolute;
+    right: 12.5%;
+    color: var(--primary);
+    font-size: 30px;
+  }
+
+  #dropdown-content {
+    width: 100%;
+    height: 100vh;
+    z-index: 9999;
+    background-color: var(--background);
+    color: var(--primary);
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+  }
+
+  #dropdown-content.active {
+    display: flex;
+  }
+
+  #dropdown-content ul {
+    list-style-type: none;
+  }
+
+  #dropdown-content li {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    margin-bottom: 50px;
+  }
+
+  #dropdown-content a {
+    text-decoration: none;
+    color: var(--primary);
+    font-weight: 600;
   }
 }
