--- a/webpages/contents/style/index.css
+++ b/webpages/contents/style/index.css
@@ -39,36 +39,50 @@ section > h1 {
   color: var(--background);
 }
 
-.img-wrapper {
+.img-bar {
+  margin: 1.25% 1.75%;
   position: fixed;
-  top: 2.5%;
-  left: 1.875%;
+  width: fit-content;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  z-index: 9999;
+  background-color: transparent;
+}
+
+.img-border {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  min-width: 25px;
+  min-height: 25px;
+  border: 2px solid var(--primary);
+  border-radius: 50%;
+  mix-blend-mode: difference;
+  background-color: transparent;
+  z-index: 1;
+  margin-left: -0.0625%;
+}
+
+.img-wrapper {
+  position: absolute;
   width: 53px;
   height: 53px;
+  min-width: 26.5px;
+  min-height: 26.5px;
   cursor: pointer;
-  z-index: 9999;
+  z-index: 1;
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.img-border {
-  position: fixed;
-  top: 2.5%;
-  left: 1.875%;
-  width: 50px;
-  height: 50px;
-  border: 2px solid var(--primary);
-  border-radius: 50%;
-  mix-blend-mode: difference;
-  background-color: transparent;
-  z-index: 2;
-}
-
 .profile-img {
   width: 50px;
   height: 50px;
+  min-width: 25px;
+  min-height: 25px;
   border-radius: 50%;
   object-fit: cover;
   object-position: center;
@@ -76,8 +90,8 @@ section > h1 {
 }
 
 .top-bar {
-  margin-top: 0.675%;
-  margin-left: 3.75%;
+  padding-left: 5%;
+  margin-top: 1.25%;
   mix-blend-mode: difference;
   background-color: transparent;
   position: fixed;
@@ -894,6 +908,17 @@ form > button:not(:disabled):hover {
 }
 
 @media screen and (max-width: 1024px) {
+
+  .profile-img, .img-wrapper {
+    width: 75px;
+    height: 75px;
+  }
+
+  .img-border {
+    width: 75px;
+    height: 75px;
+  }
+
   .top-bar {
     height: 12.5vh;
   }
@@ -906,22 +931,6 @@ form > button:not(:disabled):hover {
 
   .top-bar > ul > li > a {
     font-size: 20px;
-  }
-
-  .img-wrapper {
-    width: 81px;
-    height: 81px;
-  }
-
-  .profile-img {
-    width: 75px;
-    height: 75px;
-  }
-
-  .img-border {
-    z-index: 3;
-    width: 75px;
-    height: 75px;
   }
 
   .img-clip {
@@ -1053,18 +1062,19 @@ form > button:not(:disabled):hover {
 
 @media screen and (max-width: 430px) {
 
+  .img-bar {
+    margin-left: 5%;
+    margin-top: 0%;
+  }
+
   .img-border {
     width: 50px;
     height: 50px;
-    top: 2.5%;
-    left: 5%;
   }
 
   .img-wrapper {
     width: 53px;
     height: 53px;
-    top: 2.5%;
-    left: 5%;
   }
 
   .profile-img {
